# crewai_chatbot

./: README.md  conversation1.md  conversation2.md  pyproject.toml  report.md
src/chatbot/: crew.py  main.py
src/chatbot/config/: agents.yaml  tasks.yaml
